--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.androidcourse" >
 
+    <!-- To access Google+ APIs: -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -15,7 +17,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".FrameLayoutActivity" >
+        </activity>
+        <activity android:name=".LinearLayoutActivity" >
+        </activity>
+        <activity android:name=".ListViewActivity" >
+        </activity>
+        <activity android:name=".GridViewActivity" >
+        </activity>
+        <activity android:name=".FragmentsExampleActivity" >
+        </activity>
     </application>
 
 </manifest>
