--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.androidcourse" >
+    package="com.androidcourse">
 
-    <!-- To access Google+ APIs: -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FrameLayoutActivity" >
-        </activity>
-        <activity android:name=".LinearLayoutActivity" >
-        </activity>
-        <activity android:name=".ListViewActivity" >
-        </activity>
-        <activity android:name=".GridViewActivity" >
-        </activity>
-        <activity android:name=".FragmentsExampleActivity" >
-        </activity>
+        <activity android:name=".FrameLayoutActivity"/>
+        <activity android:name=".LinearLayoutActivity"/>
+        <activity android:name=".ListViewActivity"/>
+        <activity android:name=".GridViewActivity"/>
+        <activity android:name=".FragmentsExampleActivity"/>
     </application>
 
 </manifest>
