--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.androidcourse">
+    package="com.androidcourse" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -8,19 +8,21 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme" >
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FrameLayoutActivity"/>
-        <activity android:name=".LinearLayoutActivity"/>
-        <activity android:name=".ListViewActivity"/>
-        <activity android:name=".GridViewActivity"/>
-        <activity android:name=".FragmentsExampleActivity"/>
+        <activity android:name=".FrameLayoutActivity" />
+        <activity android:name=".LinearLayoutActivity" />
+        <activity android:name=".ListViewActivity" />
+        <activity android:name=".GridViewActivity" />
+        <activity android:name=".FragmentsExampleActivity" />
+        <activity android:name=".CustomAdapterExampleActivity" >
+        </activity>
     </application>
 
 </manifest>
